Move to 4.0.3-SNAPSHOT