@@ -10,7 +10,7 @@
     <groupId>net.sf.flatpack</groupId>
     <artifactId>flatpack-parent</artifactId>
     <name>FlatPack</name>
-    <version>4.0.2</version>
+    <version>4.0.3-SNAPSHOT</version>
     <url>https://github.com/Appendium/flatpack</url>
     <packaging>pom</packaging>
 
@@ -157,102 +157,6 @@
                     </execution>
                 </executions>
             </plugin>
-            <!--
-                <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-javadoc-plugin</artifactId>
-                <version>2.9.1</version>
-                <configuration>
-                <excludePackageNames>net.sf.flatpack.examples</excludePackageNames>
-                </configuration>
-                <executions>
-                <execution>
-                <id>attach-javadocs</id>
-                <goals>
-                <goal>jar</goal>
-                </goals>
-                </execution>
-                <execution>
-                <id>aggregate</id>
-                <goals>
-                <goal>aggregate</goal>
-                </goals>
-                <phase>site</phase>
-                </execution>
-                </executions>
-                </plugin>
-                <plugin>
-                <groupId>org.owasp</groupId>
-                <artifactId>dependency-check-maven</artifactId>
-                <version>1.3.3</version>
-                <configuration>
-                <cveValidForHours>12</cveValidForHours>
-                <failBuildOnCVSS>4</failBuildOnCVSS>
-                </configuration>
-                <executions>
-                <execution>
-                <goals>
-                <goal>check</goal>
-                </goals>
-                </execution>
-                </executions>
-                </plugin>
-            -->
-            <!--
-                <plugin>
-                <groupId>com.github.github</groupId>
-                <artifactId>downloads-maven-plugin</artifactId>
-                <version>0.6</version>
-                <configuration>
-                <description>Official ${project.name} build of the ${project.version} release</description>
-                <override>true</override>
-                <includeAttached>true</includeAttached>
-                <server>github</server>
-                </configuration>
-                <executions>
-                <execution>
-                <goals>
-                <goal>upload</goal>
-                </goals>
-                <phase>install</phase>
-                </execution>
-                </executions>
-                </plugin>
-                <plugin>
-                <groupId>com.github.github</groupId>
-                <artifactId>site-maven-plugin</artifactId>
-                <version>0.12</version>
-                <configuration>
-                <message>Building site for ${project.version}</message>
-                </configuration>
-                <executions>
-                <execution>
-                <goals>
-                <goal>site</goal>
-                </goals>
-                <phase>site</phase>
-                </execution>
-                </executions>
-                </plugin> -->
-
-            <!--
-                <plugin>
-                <groupId>com.github.github</groupId>
-                <artifactId>site-maven-plugin</artifactId>
-                <version>0.12</version>
-                <configuration>
-                <message>Building site for ${project.version}</message>
-                </configuration>
-                <executions>
-                <execution>
-                <goals>
-                <goal>site</goal>
-                </goals>
-                <phase>site</phase>
-                </execution>
-                </executions>
-                </plugin>
-            -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-site-plugin</artifactId>
@@ -311,61 +215,6 @@
                                 <aggregate>true</aggregate>
                             </configuration>
                         </plugin>
-                        <!-- <plugin>
-                            <groupId>org.codehaus.mojo</groupId>
-                            <artifactId>cobertura-maven-plugin</artifactId>
-                            <version>2.6</version>
-                            <configuration>
-                            <formats>
-                            <format>html</format>
-                            </formats>
-                            <instrumentation>
-                            <ignores>
-                            <ignore>org.lanyonm.playground.config.*</ignore>
-                            </ignores>
-                            <excludes>
-                            <exclude>org/lanyonm/playground/config/*.class</exclude>
-                            </excludes>
-                            </instrumentation>
-                            </configuration>
-                            </plugin>
-                            <plugin>
-                            <groupId>org.owasp</groupId>
-                            <artifactId>dependency-check-maven</artifactId>
-                            <version>1.3.3</version>
-                            <configuration>
-                            <name>Dependency Check</name>
-                            </configuration>
-                            <reportSets>
-                            <reportSet>
-                            <reports>
-                            <report>aggregate</report>
-                            </reports>
-                            </reportSet>
-                            </reportSets>
-                            </plugin>
-                            <plugin>
-                            <groupId>org.apache.maven.plugins</groupId>
-                            <artifactId>maven-pmd-plugin</artifactId>
-                            <version>2.7.1</version>
-                            <configuration>
-                            <sourceEncoding>${project.build.sourceEncoding}</sourceEncoding>
-                            <minimumTokens>100</minimumTokens>
-                            <targetJdk>${java.version}</targetJdk>
-                            </configuration>
-                            </plugin>
-                            <plugin>
-                            <groupId>org.codehaus.mojo</groupId>
-                            <artifactId>findbugs-maven-plugin</artifactId>
-                            <version>2.5.3</version>
-                            <configuration>
-                            <effort>Max</effort>
-                            <threshold>Low</threshold>
-                            <argLine>-Xmx256m</argLine>
-                            <argLine>-XX:MaxPermSize=256m</argLine>
-                            </configuration>
-                            </plugin>
-                        -->
                         <plugin>
                             <groupId>org.codehaus.mojo</groupId>
                             <artifactId>taglist-maven-plugin</artifactId>
@@ -438,27 +287,6 @@
                 </plugins>
             </build>
         </profile>
-
-        <!--
-            <profile>
-            <id>deploy-site</id>
-            <activation>
-            <property>
-            <name>performRelease</name>
-            <value>true</value>
-            </property>
-            </activation>
-            <properties>
-            <site.deploy.url>scp://shell.sourceforge.net/home/groups/f/fl/flatpack/htdocs</site.deploy.url>
-            </properties>
-            </profile>
-            <profile>
-            <id>stage-site</id>
-            <properties>
-            <site.deploy.url>scp://shell.sourceforge.net/home/groups/f/fl/flatpack/htdocs/test</site.deploy.url>
-            </properties>
-            </profile>
-        -->
 
     </profiles>
 
